Added Ray Tracer

--- a/personal_projects.html
+++ b/personal_projects.html
@@ -112,6 +112,53 @@
 
         <div class="Project">
             <div class="first">
+                <img src="assets/RayTraceVideo.mov" width="500px">
+            </div>
+            <div class="second">
+                <p class="title">Ray Tracer</p>
+                <p>
+                <ul>
+                    <li>Written in C++ with Ray Tracing implemented fully in GLSL fragment shader</li>
+                    <li>Uses SDL2 and OpenGL 4.1</li>
+                    <li>Basic FPS game engine coded from scratch</li>
+                    <li>Implements basic Lambertian and reflective surfaces</li>
+                    <li>Uses hash functions for RNG Lambertian reflectance</li>
+                    <li>
+                        <a
+                            class="Link" href="https://github.com/nickmoy/Ray-Tracer">
+                            Github
+                        </a> 
+                    </li>
+                </ul>
+                </p>
+            </div>
+        </div>
+
+        <div class="Project">
+            <div class="first">
+                <img src="assets/tennis.gif" width="500px">
+            </div>
+            <div class="second">
+                <p class="title">Tennis Image Analysis AI</p>
+                <p>
+                <ul>
+                    <li>Written in Python</li>
+                    <li>Uses YOLO object detection model and Pytorch Resnet50 neural network</li>
+                    <li>Uses reference points to predict coordinates of players and ball on court</li>
+                    <li>Utilizes libraries: ultralytics, pytorch, opencv, pickle, pandas</li>
+                    <li>
+                        <a
+                            class="Link" href="https://github.com/nickmoy/tennis-image-analysis-ai">
+                            Github
+                        </a> 
+                    </li>
+                </ul>
+                </p>
+            </div>
+        </div>
+
+        <div class="Project">
+            <div class="first">
                 <img src="assets/VerletIntegrationPic.png" width="300px">
             </div>
             <div class="second">
@@ -176,28 +223,6 @@
             </div>
         </div>
 
-        <div class="Project">
-            <div class="first">
-                <img src="assets/tennis.gif" width="500px">
-            </div>
-            <div class="second">
-                <p class="title">Tennis Image Analysis AI</p>
-                <p>
-                <ul>
-                    <li>Written in Python</li>
-                    <li>Uses YOLO object detection model and Pytorch Resnet50 neural network</li>
-                    <li>Uses reference points to predict coordinates of players and ball on court</li>
-                    <li>Utilizes libraries: ultralytics, pytorch, opencv, pickle, pandas</li>
-                    <li>
-                        <a
-                            class="Link" href="https://github.com/nickmoy/tennis-image-analysis-ai">
-                            Github
-                        </a> 
-                    </li>
-                </ul>
-                </p>
-            </div>
-        </div>
     </div>
 
 </body>
