Fixed Ray Trace video link

--- a/personal_projects.html
+++ b/personal_projects.html
@@ -112,7 +112,7 @@
 
         <div class="Project">
             <div class="first">
-                <img src="assets/RayTraceVideo.mov" width="500px">
+                <img src="assets/RayTrace.mp4" width="500px">
             </div>
             <div class="second">
                 <p class="title">Ray Tracer</p>
